[gd_scene load_steps=16 format=3 uid="uid://bfagedakxxejm"]

[ext_resource type="Script" path="res://scripts/sign_up.gd" id="1_rkjvu"]
[ext_resource type="FontFile" uid="uid://cf3a7mowy5fgl" path="res://assets/fonts/kenvector_future.ttf" id="2_g1w5t"]
[ext_resource type="Texture2D" uid="uid://cg483dwdrktcw" path="res://assets/images/back.png" id="3_aaacw"]
[ext_resource type="StyleBox" uid="uid://wem08rsh1cos" path="res://assets/styleBox/signUp_input_focus.tres" id="3_yx8hg"]
[ext_resource type="Texture2D" uid="uid://by8n8uapqyxmx" path="res://assets/images/clown.png" id="4_e6cq5"]
[ext_resource type="StyleBox" uid="uid://cbkuxplawvtce" path="res://assets/styleBox/signUp_input.tres" id="4_mfcmv"]
[ext_resource type="Texture2D" uid="uid://ccdw5btr66au7" path="res://assets/images/visibility/visible.png" id="5_oibnm"]
[ext_resource type="Texture2D" uid="uid://bu1jy0clvmo3y" path="res://assets/images/fermer.png" id="5_pos6h"]
[ext_resource type="FontFile" uid="uid://0nrf8fb7tftm" path="res://assets/fonts/Lobster 1.4.otf" id="6_yv1ox"]
[ext_resource type="PackedScene" uid="uid://cxe2j8yylr24h" path="res://scenes/popUp.tscn" id="9_ysitm"]
[ext_resource type="StyleBox" uid="uid://dsmipxadgfpou" path="res://assets/styleBox/logIn_button_normal.tres" id="11_5wj7i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhx8b"]
bg_color = Color(0.152941, 0.14902, 0.14902, 0.780392)
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xum7"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_bottom_left = 7
shadow_color = Color(0.144063, 0.144063, 0.144063, 0.6)
shadow_size = 3
shadow_offset = Vector2(-2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lgr06"]
bg_color = Color(0.403922, 0.403922, 0.403922, 0.270588)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 2
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2ubi"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.0562916, 0.0562916, 0.0562916, 0.6)
shadow_size = 2
shadow_offset = Vector2(4, 4)

[node name="Control" type="Control"]
process_mode = 3
z_index = 5
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 170.0
offset_right = -325.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rkjvu")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.249
anchor_top = -0.212
anchor_right = 1.254
anchor_bottom = 1.185
offset_left = 0.475006
offset_top = -0.399994
offset_right = 4.1499
offset_bottom = -38.0001
color = Color(0, 0, 0, 0.501961)

[node name="ShadowBox" type="Label" parent="."]
z_index = -1
layout_mode = 0
offset_left = -3.0
offset_top = 1.0
offset_right = 1283.0
offset_bottom = 815.0
theme_override_styles/normal = SubResource("StyleBoxFlat_nhx8b")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
offset_right = 1275.0
offset_bottom = 800.0
mouse_filter = 2
color = Color(0.729412, 0.215686, 0.215686, 1)

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
offset_right = 1275.0
offset_bottom = 800.0
mouse_filter = 2
texture = ExtResource("3_aaacw")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 385.0
offset_top = 293.0
offset_right = 885.0
offset_bottom = 622.0
theme_override_constants/separation = 29

[node name="username" type="LineEdit" parent="VBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/clear_button_color_pressed = Color(0.85098, 0.85098, 0.85098, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.619608)
theme_override_colors/font_selected_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = ExtResource("3_yx8hg")
theme_override_styles/normal = ExtResource("4_mfcmv")
placeholder_text = "     Username"

[node name="email" type="LineEdit" parent="VBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/clear_button_color_pressed = Color(0.85098, 0.85098, 0.85098, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.619608)
theme_override_colors/font_selected_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = ExtResource("3_yx8hg")
theme_override_styles/normal = ExtResource("4_mfcmv")
placeholder_text = "     Email"

[node name="password" type="LineEdit" parent="VBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.619608)
theme_override_colors/font_selected_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = ExtResource("3_yx8hg")
theme_override_styles/normal = ExtResource("4_mfcmv")
placeholder_text = "     Password"
secret = true

[node name="visibility_button" type="Button" parent="VBoxContainer/password"]
layout_mode = 0
offset_left = 444.0
offset_top = 9.0
offset_right = 494.0
offset_bottom = 58.0
icon = ExtResource("5_oibnm")
flat = true
expand_icon = true

[node name="confirmPassword" type="LineEdit" parent="VBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.619608)
theme_override_colors/font_selected_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = ExtResource("3_yx8hg")
theme_override_styles/normal = ExtResource("4_mfcmv")
placeholder_text = "     Confirm Password"
secret = true

[node name="visibility_button2" type="Button" parent="VBoxContainer/confirmPassword"]
layout_mode = 0
offset_left = 444.0
offset_top = 9.0
offset_right = 494.0
offset_bottom = 58.0
icon = ExtResource("5_oibnm")
flat = true
expand_icon = true

[node name="logo" type="TextureRect" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_left = 823.0
offset_top = 32.0
offset_right = 1139.0
offset_bottom = 302.0
texture = ExtResource("4_e6cq5")
expand_mode = 1

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 1225.0
offset_right = 1276.0
offset_bottom = 50.0

[node name="CancelButton" type="Button" parent="Control"]
z_index = 3
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
icon = ExtResource("5_pos6h")
flat = true
expand_icon = true

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4xum7")

[node name="welcome2" type="Label" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 61.0
offset_right = 809.0
offset_bottom = 224.0
theme_override_colors/font_color = Color(0.051971, 0.051971, 0.051971, 0.831373)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("6_yv1ox")
theme_override_font_sizes/font_size = 130
text = "WELCOME !"

[node name="signup" type="Button" parent="."]
z_index = 1
layout_mode = 2
offset_left = 490.0
offset_top = 640.0
offset_right = 776.0
offset_bottom = 715.0
theme_override_colors/font_hover_color = Color(0.972549, 0.972549, 0.972549, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0.666667, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_g1w5t")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_lgr06")
theme_override_styles/normal = SubResource("StyleBoxFlat_u2ubi")
text = "Sign up"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 489.0
offset_top = 752.0
offset_right = 787.0
offset_bottom = 798.0
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Have an account ?"

[node name="LogIn" type="Button" parent="HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Log In "
flat = true

[node name="HTTPRequest_auth" type="HTTPRequest" parent="."]

[node name="popUp_error" parent="." instance=ExtResource("9_ysitm")]
visible = false
z_index = 1
offset_left = 290.0
offset_top = 344.0
offset_right = 990.0
offset_bottom = 564.0

[node name="password_check" type="Label" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 534.0
offset_right = 827.0
offset_bottom = 560.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "Has to contain a-z, A-Z, 0-9 and a special char"

[node name="SavePopupLabel" type="Label" parent="."]
visible = false
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.5
offset_top = 247.0
offset_right = 211.5
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = ExtResource("2_g1w5t")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = ExtResource("11_5wj7i")
text = "Account  created !"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_changed" from="VBoxContainer/password" to="." method="_on_password_text_changed"]
[connection signal="pressed" from="VBoxContainer/password/visibility_button" to="." method="_on_visibility_button_pressed"]
[connection signal="pressed" from="VBoxContainer/confirmPassword/visibility_button2" to="." method="_on_visibility_button_2_pressed"]
[connection signal="pressed" from="Control/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/LogIn" to="." method="_on_log_in_pressed"]
